# kairo

./: .arcconfig  .gitmodules  CMakeLists.txt  README.md  README.packagers.md  org.kde.kairo.appdata.xml  org.kde.kairo.desktop  org.kde.kairo.desktop.license
LICENSES/: LicenseRef-KDE-Accepted-GPL.txt
examples/: simple_example.kairo
src/: CMakeLists.txt  CircuitControlPage.qml  CircuitListPage.qml  Dependencies.qml  circuitcontrol.cpp  circuitcontrol.h  circuitlistmodel.cpp  circuitlistmodel.h  circuitmodel.cpp  circuitmodel.h  circuitreader.cpp  circuitreader.h  kairo.pro  kirigami-icons.qrc  longbeep.wav.license  main.cpp  main.qml  main.qrc  soundcontrol.cpp  soundcontrol.h  soundcontrolinterface.cpp  soundcontrolinterface.h  soundcontrolstub.cpp  soundcontrolstub.h  timercontrol.cpp  timercontrol.h  timermodel.cpp  timermodel.h  timernotificationcontrol.cpp  timernotificationcontrol.h
src/android/: AndroidManifest.xml
tests/: CMakeLists.txt  circuitcontroltest.cpp  circuitlistmodeltest.cpp  circuitmodeltest.cpp  circuitreadertest.cpp  timercontroltest.cpp  timermodeltest.cpp  timernotificationcontroltest.cpp
